# analog-film-stabilizer

./: .gitignore  CLAUDE.md  README.md  build.sh  pyproject.toml
.github/workflows/: build.yml
docs/: CODE_SIGNING.md
docs/brainstorms/: 2026-04-23-stabilization-quality-pass-requirements.md
docs/plans/: 2026-04-19-001-fix-post-refactor-review-findings-plan.md  2026-04-23-001-feat-stabilization-quality-pass-plan.md  2026-04-27-001-fix-packaged-cli-contract-plan.md  2026-04-27-001-fix-registration-first-stabilization-plan.md  2026-04-27-002-fix-template-spacing-fallback-plan.md
docs/solutions/best-practices/: post-refactor-review-checklist-dead-code-stale-references-2026-04-14.md
electron/: main.js  package-lock.json  package.json  preload.js
electron/renderer/: index.html  renderer.js  styles.css
electron/scripts/: notarize.js
scripts/: build-local.sh
src/: calibration.py  perforation_stabilizer_app.py  registration_stabilizer.py  stabilizer_cli.py  trajectory_smoothing.py
tests/: test_calibration.py  test_cli_contract.py  test_detection.py  test_registration_stabilizer.py  test_trajectory_smoothing.py
